fix color contrast a11y failure with autocomplete label in dark mode

--- a/packages/flourish-ui/src/components/Autocomplete/Autocomplete.scss
+++ b/packages/flourish-ui/src/components/Autocomplete/Autocomplete.scss
@@ -82,6 +82,10 @@ $autocomplete_width: 200px;
 }
 
 .#{$prefix}dark-mode {
+  .#{$prefix}autocomplete-label {
+    color: $f-color-font-dark;
+  }
+
   .react-aria-Input {
     color: $f-color-primary-dark;
     background-color: $f-color-bg-dark;
